# rvv-benchmarks

./: .gitignore  CMakeLists.txt  riscv-toolchain.txt
src/: CMakeLists.txt  gbench-test.cc
src/matmul/: CMakeLists.txt  matmul-scalar.cc  matmul-vector.cc
src/prefix-sum/: CMakeLists.txt  bench-scalar.cc  bench-vector.cc
src/tsvc-s1115/: CMakeLists.txt  bench-scalar.cc  bench-vector.cc
